--- a/css/blog.css
+++ b/css/blog.css
@@ -22,7 +22,7 @@ h1,h2,h3 {font-weight:400;}
 #sidebar ul ul {line-height:1.2em; margin:8px 0 8px 20px; padding:0;}
 #sidebar ul ul li a {font-weight:400;}
 #sidebar h2 {font-size: 1.4em;}
-.slogan {color:#777; font-size:1.2em; font-weight:400; margin:0 0 0 20px;}
+.slogan {color:#777; font-size:1.2em; font-weight:400; margin:0 0 20px 0;}
 .readmore {text-align:right; margin:0 20px 30px 0;}
 .timestamp {font-size:1.2em; margin:-5px 0 15px 0;}
 .timestamp a {font-weight:normal;}
