cleaned up and added SiteMigration page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 		<h1><a href="/index.html">limitless channels</a></h1>
 		<p class="slogan">language notes, tech, dataflow, and the endless infodump</p>
 		
-		<h2>directory:</h2>
+		<h2>__________</h2>
 		<ul>
 			<li><a href="/index.html">stream</a></li>
 			<li><a href="/archive.html">archive</a></li>
@@ -57,9 +57,10 @@
 		</ul>
 		
 	<p class="credits">This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons
-License</a><br />
-		Template design by <a href="http://andreasviklund.com/" target="_blank">Andreas Viklund</a></p>
-	</div>
+License.</a>
+	<br />
+	Template design by <a href="http://andreasviklund.com/" target="_blank">Andreas Viklund</a></p>
+</div>
 
 {{ content }}
 	
