--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,12 +41,12 @@
 <body>
 <div id="wrap">
 	<div id="sidebar">
-		<h1><a href="/index.html">limitless channels</a></h1>
+		<h1><a href="http://limitlesschannels.com" title="Limitless Channels">limitless channels</a></h1>
 		<p class="slogan">language notes, tech, dataflow, and the endless infodump</p>
 		
 		<h2>__________</h2>
 		<ul>
-			<li><a href="/index.html">stream</a></li>
+			<li><a href="http://limitlesschannels.com">stream</a></li>
 			<li><a href="/categories/">archive</a></li>
 			<li><a href="#">links</a>
 				<ul>
