removed extras, more formatting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 		<h2>__________</h2>
 		<ul>
 			<li><a href="http://limitlesschannels.com">stream</a></li>
-			<li><a href="/categories/">archive</a></li>
+			<li><a href="/archive.html">archive</a></li>
 			<li><a href="#">links</a>
 				<ul>
 					<li><a href="/me.html">me</a></li>
