--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,8 @@ License.</a>
 	Template design by <a href="http://andreasviklund.com/" target="_blank">Andreas Viklund</a></p>
 </div>
 
+<h2>{{page.title}}</h2>
+
 {{ content }}
 
 </div>
