--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,8 +48,7 @@
 		<ul>
 			<li><a href="http://limitlesschannels.com">stream</a></li>
 			<li><a href="/archive.html">archive</a></li>
-			<!--<li><a href="/categories/">categories</a></li>
-			<li><a href="/projects.html">projects</a></li>-->
+			<li><a href="/projects.html">projects</a></li>
 			<li><a href="#">links</a>
 				<ul>
 					<li><a href="/me.html">me</a></li>
