updated sidebar, cleaned up

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,7 @@
 		</ul>
 		
 	<p class="credits">This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons
-License.</a>
-	<br />
-	Template design by <a href="http://andreasviklund.com/" target="_blank">Andreas Viklund</a></p>
+License.</a></p>
 </div>
 
 <h2>{{page.title}}</h2>
