--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
 			</li>
 		</ul>
 		
-	<p class="credits">This work is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons
+	<p class="credits">licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons
 License.</a></p>
 </div>
 
