cleaned genderdirectness, nback, and old formatting. Also added popular metapage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<!- meta name="author" content="Lucas Charles" -->
 
 	{% if page.title %}
-	<title>{{page.title}} - Limitless Channels</title>
+	<title>{{page.title}} - limitless channels</title>
 	{% else %}
 	<title>Limitless Channels</title>
 	{% endif %}
@@ -48,6 +48,7 @@
 		<ul>
 			<li><a href="http://limitlesschannels.com">stream</a></li>
 			<li><a href="/projects.html">projects</a></li>
+			<li><a href="/popular.html">popular</a></li>
 			<li><a href="/archive.html">archive</a></li>
 			<li><a href="#">links</a>
 				<ul>
