cleaned up direc tree

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,8 +58,8 @@
 			</li>
 		</ul>
 		
-	<p class="credits">licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons
-License.</a></p>
+	<p class="credits">licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons
+.</a></p>
 </div>
 
 <h2>{{page.title}}</h2>
