various link and minor formatting tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 	<!- meta name="author" content="Lucas Charles" -->
 
 	{% if page.title %}
-	<title>{{page.title}} - limitless channels</title>
+	<title>{{page.title}} | limitless channels</title>
 	{% else %}
-	<title>Limitless Channels</title>
+	<title>limitless channels</title>
 	{% endif %}
 
 	{% if page.description %}
@@ -58,8 +58,7 @@
 			</li>
 		</ul>
 		
-	<p class="credits">licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons
-.</a></p>
+	<p class="credits">licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">Creative Commons</a></p>
 </div>
 
 <h2>{{page.title}}</h2>
