cleaned up css, moved words around

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 <body>
 <div id="wrap">
 	<div id="sidebar">
-		<h1><a href="http://limitlesschannels.com" title="Limitless Channels">limitless channels</a></h1>
+		<h1 class="ghostlinks"><a href="http://limitlesschannels.com" title="Limitless Channels">limitless channels</a></h1>
 		<p class="slogan">language notes, tech, dataflow, and the endless infodump</p>
 		
 		<hr />
@@ -50,7 +50,7 @@
 			<li><a href="/projects.html">projects</a></li>
 			<li><a href="/popular.html">popular</a></li>
 			<li><a href="/archive.html">archive</a></li>
-			<li><a href="#">links</a>
+			<li class="ghostlinks"><a href="#">links</a></li>
 				<ul>
 					<li><a href="/me.html">me</a></li>
 					<li><a href="/others.html">others</a></li>
