--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ comments: true
 <div class="post" id="main-content">
 
 	<p class="timestamp">
-		{{page.date | date_to_string}} | {% if page.category %} <a href="/{{page.category}}">{{page.category}}</a> {% endif %} | author: theoretick
+		{{page.date | date_to_string}} | {% if page.category %} <a href="/{{page.category}}">{{page.category}}</a> | {% endif %} theoretick
 	</p>
 	<div class="content">
 	{{ content }}
