--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,7 @@ For more information, see http://andreasviklund.com/templates/basic-reader/
 */
 
 *{margin:0; padding:0;}
-body {background:#fff url(background.jpg) top center no-repeat; color:#303030; font:92% Georgia,Times New Roman, serif; line-height:1.5em;}
+body {background:#fff url(background.jpg) top center no-repeat; color:#303030; font:92% Futura,Georgia, serif; line-height:1.5em;}
 a {color:#972323; text-decoration:none;}
 a:hover {text-decoration:underline;}
 p,ul,ol,dl {margin:0 0 20px 20px;}
@@ -14,7 +14,7 @@ h2 {font-size:1.8em; color:#2380a0; margin:0 0 15px;}
 h3 {font-size:1.2em; margin:10px 0 8px 20px;}
 h1,h2,h3 {font-weight:400;}
 #wrap {color:#303030; margin:40px auto; padding:0; width:920px;}
-#content {text-align:left; width:700px;}
+#content {text-align:left; width:700px; font: Futura,Georgia, serif;}
 #sidebar {float:right; line-height:1.4em; width:200px; margin:0 0 0 10px}
 #sidebar ul {font-size:0.9em; list-style:none; margin:0; padding:0 0 15px 0;}
 #sidebar li {list-style:none; margin:0 0 5px; padding:0;}
@@ -22,6 +22,9 @@ h1,h2,h3 {font-weight:400;}
 #sidebar ul ul {line-height:1.2em; margin:8px 0 8px 20px; padding:0;}
 #sidebar ul ul li a {font-weight:400;}
 #sidebar h2 {font-size: 1.4em;}
+/* ghost links are for site title and "links" section of sidebar to remove link underline for cleaner formatting*/
+.ghostlinks a {color:#972323; text-decoration:none;}
+.ghostlinks a:hover {text-decoration:none;}
 .slogan {color:#777; font-size:1.2em; font-weight:400; margin:0 0 20px 0;}
 .readmore {text-align:right; margin:0 20px 30px 0;}
 .timestamp {font-size:1.2em; margin:-5px 0 15px 0;}
@@ -30,4 +33,4 @@ h1,h2,h3 {font-weight:400;}
 .credits a {color:#777;}
 .clear {clear:both;}
 #recent li {list-style:none;}
-blockquote {text-decoration:italic; margin: 15px;}
+.blockquote {text-decoration:italic; margin: 15px;}
