--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
+	<link href='http://fonts.googleapis.com/css?family=Archivo+Narrow' rel='stylesheet' type='text/css'>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<!- meta name="author" content="Lucas Charles" -->
+	<!- meta name="author" content="Lucas C" -->
 
 	{% if page.title %}
 	<title>{{page.title}} | limitless channels</title>
