--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,7 @@ For more information, see http://andreasviklund.com/templates/basic-reader/
 */
 
 *{margin:0; padding:0;}
-body {background:#fff url(background.jpg) top center no-repeat; color:#303030; font:92% Futura,Georgia, serif; line-height:1.5em;}
+body {background:#fff url(background.jpg) top center no-repeat; color:#303030; font-family:92% Archivo Narrow, sans-serif; line-height:1.5em;}
 a {color:#972323; text-decoration:none;}
 a:hover {text-decoration:underline;}
 p,ul,ol,dl {margin:0 0 20px 20px;}
@@ -14,7 +14,7 @@ h2 {font-size:1.8em; color:#2380a0; margin:0 0 15px;}
 h3 {font-size:1.2em; margin:10px 0 8px 20px;}
 h1,h2,h3 {font-weight:400;}
 #wrap {color:#303030; margin:40px auto; padding:0; width:920px;}
-#content {text-align:left; width:700px; font: Futura,Georgia, serif;}
+#content {text-align:left; width:700px; font-family: Archivo Narrow, sans-serif;}
 #sidebar {float:right; line-height:1.4em; width:200px; margin:0 0 0 10px}
 #sidebar ul {font-size:0.9em; list-style:none; margin:0; padding:0 0 15px 0;}
 #sidebar li {list-style:none; margin:0 0 5px; padding:0;}
@@ -34,3 +34,4 @@ h1,h2,h3 {font-weight:400;}
 .clear {clear:both;}
 #recent li {list-style:none;}
 .blockquote {text-decoration:italic; margin: 15px;}
+@import url(http://fonts.googleapis.com/css?family=Archivo+Narrow);
