--- a/css/blog.css
+++ b/css/blog.css
@@ -22,16 +22,15 @@ h1,h2,h3 {font-weight:400;}
 #sidebar li a {font-size:1.4em;}
 #sidebar ul ul {line-height:1.2em; margin:8px 0 8px 20px; padding:0;}
 #sidebar ul ul li a {font-weight:400;}
-#sidebar h2 {font-size: 1.4em;}
+/*#sidebar h2 {font-size: 1.4em;}*/
 /* ghost links are for site title and "links" section of sidebar to remove link underline for cleaner formatting*/
 .ghostlinks a {color:#972323; text-decoration:none;}
 .ghostlinks a:hover {text-decoration:none;}
 .slogan {color:#777; font-size:1.2em; font-weight:400; margin:0 0 20px 0;}
-.readmore {text-align:right; margin:0 20px 30px 0;}
 .timestamp {font-size:1.2em; margin:-5px 0 15px 0;}
 .timestamp a {font-weight:normal;}
 .credits {font-size:0.8em; color:#777; margin:0 0 10 10px;}
 .credits a {color:#777;}
 .clear {clear:both;}
-#recent li {list-style:none;}
+#cleanlist li {list-style:none;}
 .blockquote {text-decoration:italic; margin: 15px;}
