--- a/css/blog.css
+++ b/css/blog.css
@@ -33,4 +33,4 @@ h1,h2,h3 {font-weight:400;}
 .credits a {color:#777;}
 .clear {clear:both;}
 #cleanlist li {list-style:none;}
-.blockquote {font-style:italic; margin: 15px;}
+.blockquote {font-style:italic; padding-left: 15px; margin: 15px;}
