--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,9 @@
 
 <body>
 <div id="wrap">
-	<div id="sidebar">
+	<div class="sidebar">
 		<h1 class="ghostlinks"><a href="http://limitlesschannels.com" title="Limitless Channels">limitless channels</a></h1>
-		<p class="slogan">language notes, tech, dataflow, and the endless infodump</p>
+		<p id="subtitle">language notes, tech, dataflow, and the endless infodump</p>
 		
 		<hr />
 		<ul>
@@ -55,10 +55,9 @@
 					<li><a href="/others.html">others</a></li>
 				</ul>
 			</li>
-		</ul>
-		
-	<p class="credits"><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" alt="Creative Commons" /></a></p>
-</div>
+		</ul>	
+	<p class="sidebar"><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" alt="Creative Commons" /></a>
+	</div>
 
 <h2>{{page.title}}</h2>
 
