--- a/css/blog.css
+++ b/css/blog.css
@@ -30,3 +30,8 @@ h1,h2,h3 {font-weight:400;}
 #landingsub {padding-left:24px;}
 .blockquote {font-style:italic; padding-left: 15px; margin: 15px;}
 .ratings {font-weight:bold; color:#2380a0;}
+.linktable {
+        width: 60%;
+        border:0;
+        padding-left: 15px;
+      }
