lots of super minor CSS spacing tweaks on sidebar, fixed uneven line-height and removed unnecessary class calls

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
 
 	<link rel="stylesheet" type="text/css" href="/css/blog.css" title="Basic Reader CSS template" media="screen,projection" />
 
+<!- Google analytics script->
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -54,9 +55,8 @@
 					<li><a href="/me.html">me</a></li>
 					<li><a href="/others.html">others</a></li>
 				</ul>
-			</li>
+			<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" alt="Creative Commons" /></a>
 		</ul>	
-	<p class="sidebar"><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" alt="Creative Commons" /></a>
 	</div>
 
 <h2>{{page.title}}</h2>
