--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 	{% endif %}
 
 	<link rel="stylesheet" type="text/css" href="/css/blog.css" title="Basic Reader CSS template" media="screen,projection" />
+	<!-<link rel="stylesheet" type="text/javascript" src="invert.js" />->
 
 <!- Google analytics script->
 <script type="text/javascript">
@@ -34,6 +35,12 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+
+</script>
+
+<!- Color inversion script->
+<script type="text/javascript">
+$(document).ready(
 
 </script>
 
