--- a/css/blog-invert.css
+++ b/css/blog-invert.css
@@ -1,20 +1,22 @@
 /*
 Original design based on Andreas Viklund's Basic Reader v1.0 xhtml/css template 
 For more information, see http://andreasviklund.com/templates/basic-reader/
+
+INVERTED COLOR EDITION
 */
 
 @import url("http://fonts.googleapis.com/css?family=Archivo+Narrow");
 *{margin:0; padding:0;}
-body {color:#303030; font:92%; font-family:Archivo Narrow, sans-serif; line-height:1.5em;}
-a {color:#972323; text-decoration:none;}
+body {color:#DC7F5F; font:92%; font-family:Archivo Narrow, sans-serif; line-height:1.5em;}
+a {color:#68DCDC; text-decoration:none;}
 a:hover {text-decoration:underline;}
 p,ul,ol,dl {margin:0 0 20px 20px;}
-h1 {color:#972323; font-size:2em; line-height:1.1em;}
-h1 a {color:#972323; text-transform:none;}
-h2 {font-size:1.8em; color:#2380a0; margin-bottom:15px;}
+h1 {color:#68DCDC; font-size:2em; line-height:1.1em;}
+h1 a {color:#68DCDC; text-transform:none;}
+h2 {font-size:1.8em; color:#DC7F5F; margin-bottom:15px;}
 h3 {font-size:1.2em; margin:10px 0 8px 20px;}
 h1,h2,h3 {font-weight:400;}
-#wrap {color:#303030; margin:40px auto; padding:0; width:920px;}
+#wrap {color:#DC7F5F; margin:40px auto; padding:0; width:920px;}
 #content {text-align:left; width:700px; font-family: Archivo Narrow, sans-serif;}
 #subtitle {line-height:1.2em; font-size:1.2em; font-weight:400; margin:0 0 7px;}
 .sidebar {float:right; line-height:1.4em; width:200px; margin-left:10px}
@@ -29,7 +31,7 @@ h1,h2,h3 {font-weight:400;}
 #landinglist li {list-style:none;}
 #landingsub {padding-left:24px;}
 .blockquote {font-style:italic; padding-left: 15px; margin: 15px;}
-.ratings {font-weight:bold; color:#2380a0;}
+.ratings {font-weight:bold; color:#DC7F5F;}
 .linktable {
         width: 60%;
         border:0;
