reformatted nicotine and filled out reference section

--- a/css/blog.css
+++ b/css/blog.css
@@ -4,34 +4,78 @@ For more information, see http://andreasviklund.com/templates/basic-reader/
 */
 
 @import url("http://fonts.googleapis.com/css?family=Archivo+Narrow");
-*{margin:0; padding:0;}
-body {color:#303030; font:92%; font-family:Archivo Narrow, sans-serif; line-height:1.5em;}
-a {color:#972323; text-decoration:none;}
+* {
+	margin:0;
+	padding:0;}
+body {color:#303030;
+	font:92%;
+	font-family:Archivo Narrow, sans-serif;
+	line-height:1.5em;}
+a {
+	color:#972323;
+	text-decoration:none;}
 a:hover {text-decoration:underline;}
 p,ul,ol,dl {margin:0 0 20px 20px;}
-h1 {color:#972323; font-size:2em; line-height:1.1em;}
-h1 a {color:#972323; text-transform:none;}
-h2 {font-size:1.8em; color:#2380a0; margin-bottom:15px;}
-h3 {font-size:1.2em; margin:10px 0 8px 20px;}
+h1 {color:#972323;
+	font-size:2em;
+	line-height:1.1em;}
+h1 a {color:#972323;}
+h2 {
+	font-size:1.8em;
+	color:#2380a0;
+	margin-bottom:15px;}
+h3 {
+	font-size:1.2em;
+	margin:10px 0 8px 20px;}
 h1,h2,h3 {font-weight:400;}
-#wrap {color:#303030; margin:40px auto; padding:0; width:920px;}
-#content {text-align:left; width:700px; font-family: Archivo Narrow, sans-serif;}
-#subtitle {line-height:1.2em; font-size:1.2em; font-weight:400; margin:0 0 7px;}
-.sidebar {float:right; line-height:1.4em; width:200px; margin-left:10px}
-.sidebar ul {font-size:0.9em; list-style:none; margin:0; padding:7px 0 5px;}
-.sidebar li {list-style:none; margin:0 0 5px;}
+#wrap {
+	color:#303030;
+	margin:40px auto;
+	padding:0;
+	width:920px;}
+#content {
+	text-align:left;
+	width:700px;
+	font-family:Archivo Narrow, sans-serif;}
+#subtitle {
+	line-height:1.2em;
+	font-size:1.2em;
+	font-weight:400;
+	margin:0 0 7px;}
+.sidebar {
+	float:right;
+	line-height:1.4em;
+	width:200px;
+	margin-left:10px}
+.sidebar ul {
+	font-size:0.9em;
+	list-style:none;
+	margin:0;
+	padding:7px 0 5px;}
+.sidebar li {
+	list-style:none;
+	margin:0 0 5px;}
 .sidebar li a {font-size:1.4em;}
-.sidebar ul ul {line-height:1.2em; margin:0 0 5px 20px; }
+.sidebar ul ul {
+	line-height:1.2em;
+	margin:0 0 5px 20px;}
 /* ghostlinks for title & links section of sidebar removes underline for cleaner formatting*/
 .ghostlinks a {text-decoration:none;}
-.timestamp {font-size:1.2em; margin:-5px 0 15px 0;}
+.timestamp {
+	font-size:1.2em;
+	margin:-5px 0 15px 0;}
 .timestamp a {font-weight:normal;}
 #landinglist li {list-style:none;}
 #landingsub {padding-left:24px;}
-.blockquote {font-style:italic; padding-left: 15px; margin: 20px;}
-.ratings {font-weight:bold; color:#2380a0;}
+.blockquote {
+	font-style:italic;
+	padding-left: 15px;
+	margin: 20px;}
+.ratings {
+	font-weight:bold;
+	color:#2380a0;}
 .linktable {
-        width: 60%;
-        border:0;
-        padding-left: 15px;
-      }
+    width: 60%;
+    border:0;
+    padding-left: 15px;}
+ul#references {list-style:none;}
