lots of cleaning. Standardized post title capitalization, removed lots of derivated CSS, simplified CSS classes, fixed bad table formatting on me page, and added a word to projects description.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@ $(document).ready(
 					<li><a href="/me.html">me</a></li>
 					<li><a href="/others.html">others</a></li>
 				</ul>
-			<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" alt="Creative Commons" /></a>
+			<a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img id="license" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" alt="Creative Commons License" /></a>
 		</ul>	
 	</div>
 
