added github commit plugin to sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,11 +61,14 @@
   				<li><a href="/popular.html">popular</a></li>
   				<li><a href="/archive.html">archive</a></li>
   				<li class="ghostlinks"><a href="#">links</a></li>
-  					<ul>
-  						<li><a href="/me.html">me</a></li>
-  						<li><a href="/others.html">others</a></li>
-  					</ul>
+          <ul>
+            <li><a href="/me.html">me</a></li>
+            <li><a href="/others.html">others</a></li>
+          </ul>
   				<a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img id="license" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" alt="Creative Commons License" /></a>
+          <br />
+          <br />
+          {% gitactivity %}
   			</ul>	
   		</div>
   	</div>
