--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,17 +44,17 @@
 <div class="container-fluid">
   <div class="row-fluid">
   	<div class="span12">
-  
+
   		<div class="span8 offset1">
   			<h2>{{page.title}}</h2>
-  
+
   			{{ content }}
   		</div>
-  
+
   		<div class="span2 sidebar">
   			<h1 class="ghostlinks"><a href="http://limitlesschannels.com" title="Limitless Channels">limitless <br />channels</a></h1>
   			<h3 id="subtitle">language notes, tech, dataflow, and the endless infodump</h3>
-  			
+
   			<hr />
   			<ul>
   				<li><a href="/projects.html">projects</a></li>
@@ -68,8 +68,9 @@
   				<a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img id="license" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" alt="Creative Commons License" /></a>
           <br />
           <br />
+          <h4><strong>last update:</strong></h4>
           {% gitactivity %}
-  			</ul>	
+  			</ul>
   		</div>
   	</div>
   </div>
