added osx background process blogpost, tweaked gitactivity css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
   				<a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img id="license" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" alt="Creative Commons License" /></a>
           <br />
           <br />
-          <h4><strong>last update:</strong></h4>
+          <h4 class="gitactivity">last update:</h4>
           {% gitactivity %}
   			</ul>
   		</div>
