updated resume link, cleaned css, added notification bar for lucascharles.me, added draft, rearranged projects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
 
     		<div class="span2 sidebar">
     			<h1 class="ghostlinks"><a href="http://limitlesschannels.com" title="Limitless Channels">limitless <br />channels</a></h1>
-    			<h3 id="subtitle">language notes, tech, dataflow, and the endless infodump</h3>
+    			<h3 class="subtitle">language notes, tech, dataflow, and the endless infodump</h3>
 
     			<hr />
     			<ul>
