--- a/css/blog.css
+++ b/css/blog.css
@@ -9,108 +9,162 @@ body {
 	color: #303030;
 	font-family: Archivo Narrow, sans-serif;
 	line-height: 150%;
-	font-size: 100%}
+	font-size: 100%
+}
 
 a {
 	color:#972323;
-	text-decoration: none;}
+	text-decoration: none;
+}
 
-a:hover {text-decoration: underline;}
+a:hover {
+  text-decoration: underline;
+}
 
 p,
 ul,
 ol,
-dl {margin: 0 0 20px;}
-
-h1,
-h2,
-h3 {font-weight: 400;}
+dl {
+  margin: 0 0 20px;
+  list-style-position:inside;
+}
 
 h1 {
-	color: #972323;
-	font-size: 200%;
-	line-height: 110%;}
+  color: #972323;
+  font-size: 200%;
+  font-weight: 400;
+  line-height: 110%;
+}
 
 h2 {
-	font-size: 180%;
-	color: #2380a0;
-	margin-bottom: 15px;}
+  color: #2380a0;
+  font-size: 180%;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
 
 h3 {
-	font-size: 120%;
-	margin: 10px 0 8px 20px;}
+  color: #2380a0;
+  font-size: 120%;
+  font-weight: 400;
+  margin: 10px 0 8px 10px;
+}
+
+h4 {
+  color: #2380a0;
+}
 
 blockquote {
-	font-style: italic;}
+	font-style: italic;
+}
 
 #content {
 	text-align:left;
-	font-family: Archivo Narrow, sans-serif;}
+	font-family: Archivo Narrow, sans-serif;
+}
 
-#subtitle {
+.subtitle {
+  color: black;
 	margin: 0px;
-	line-height: 150%}
+	line-height: 150%
+}
 
 .sidebar {
-	padding-left: 10px;}
+	padding-left: 10px;
+}
 
-.sidebar h1 { margin-top: 10px;}
+.sidebar h1 {
+  margin-top: 10px;
+}
 
 .sidebar ul {
 	list-style: none;
-	margin-left: 20px;}
+	margin-left: 20px;
+}
 
 .sidebar li {
 	font-size: 120%;
-	line-height: 140%;}
+	line-height: 140%;
+}
 
-#license {margin-top: 7px;}
+#license {margin-top: 7px;
+}
 
-#landinglist li {list-style: none;}
+#landinglist li {
+  list-style: none;
+}
 
-#landingsub {padding-left: 25px;}
+#landingsub {
+  padding-left: 25px;
+}
 
 /* sidebar undecorated links including title and links list item */
-.ghostlinks a:hover {text-decoration: none;}
+.ghostlinks a:hover {text-decoration: none;
+}
 
 /* slowly phasing out */
 .blockquote {
 	font-style: italic;
 	padding-left: 15px;
-	margin: 20px;}
+	margin: 20px;
+}
 
-.ratings {
-	font-weight: bold;
-	color: #2380a0;}
-
-/*link table for formatting me page "where i am" listings */
-.me-table {
-    text-align: left;
-    width: 60%;
-    padding-left: 15px;}
-
-#references {padding-left: 30px;}
 
 /* for figures/captions */
+
 .align-center {
 	display: block;
-	margin: 0 auto;}
+	margin: 0 auto;
+}
 
 .ul-toc {
 	list-style-type: square;
-	font-size: 120%;}
+	font-size: 120%;
+}
 
 .ul-toc > li {
-  margin:5px;}
+  margin:5px;
+  list-style-position:inside;
+}
+
+
+/* page specific stuff */
+
+#notify-block {
+  background-color: #D0E8F5;
+  padding: 1%;
+  border-radius: 10px;
+  color: #2B739E;
+  font-size: 150%;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.ratings {
+  font-weight: bold;
+  color: #2380a0;
+}
+
+/* link table for formatting me page "where i am" listings */
+.me-table {
+  text-align: left;
+  width: 80%;
+  padding-left: 15px;
+}
+
+#references {
+  padding-left: 30px;
+}
 
 .occupy { }
 
 div.occupy-data {
 	font-style: italic;
 	margin-left: 30px;
-	padding-bottom: 15px;}
+	padding-bottom: 15px;
+}
 
-img#pcs-rose {
+#pcs-rose {
   display: inline-block;
   height: 5%;
   width: 5%;
@@ -129,7 +183,7 @@ h4.gitactivity {
   font-size: 100%;
 }
 
-// for unord-lists on nback comparison
+/* for unordered-lists on nback comparison page */
 .no-decoration {
   list-style-type: none;
 }
